--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,3 +28,27 @@ stages:
        Dockerfile: '**/Dockerfile'
        tags: |
           $(tag)
+-stage: Provision
+  displayName: 'Terraforming on Azure'
+  dependson: Build
+  jobs: 
+  - job: Provision
+    displayname: 'Provisioning Contianer Instance'
+    pool:
+      vmImage: 'ubuntu-latest'
+    variables: 
+    - group: TerraEnvVars
+    steps: 
+    - script:
+        set -e
+
+        terraform init -input=false
+        terraform apply -input=false -auto-approve
+      name: 'RunTerrafom'
+      displayName: 'Run terraform'
+      env:
+        ARM_CLIENT_ID: $(ARM_CLIENT_ID)
+        ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
+        ARM_TENANT_ID: $(ARM_TENANT_ID)
+        ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
+        TF_VAR_imagebuild: $(tag)
