--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ stages:
   dependsOn: Build
   jobs: 
   - job: Provision
-    displayname: 'Provisioning Contianer Instance'
+    displayName: 'Provisioning Contianer Instance'
     pool:
       vmImage: 'ubuntu-latest'
     variables: 
